external-crates/move/crates/move-compiler/tests/move_check/parser/vector_literal_unclosed_type_args.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/parser/vector_literal_unclosed_type_args.move:4:13
  │
4 │         let v = vector<u64[0, 1];
  │             ^ Unused local variable 'v'. Consider removing or prefixing with an underscore: '_v'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/vector_literal_unclosed_type_args.move:4:27
  │
4 │         let v = vector<u64[0, 1];
  │                           ^
  │                           │
  │                           Unexpected '['
  │                           Expected ','

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/vector_literal_unclosed_type_args.move:4:32
  │
4 │         let v = vector<u64[0, 1];
  │                               -^ Unexpected ']'
  │                               │ 
  │                               Expected '::' after an address in a module access chain

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/vector_literal_unclosed_type_args.move:4:33
  │
4 │         let v = vector<u64[0, 1];
  │                       -         ^ Expected '>'
  │                       │          
  │                       To match this '<'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/vector_literal_unclosed_type_args.move:4:33
  │
4 │         let v = vector<u64[0, 1];
  │                                 ^
  │                                 │
  │                                 Unexpected ';'
  │                                 Expected '['

